# SW-Temperature-Monitoring-System

./: .gitignore  CMakeLists.txt  README.md  dzialalol.csv  dzialalol2.csv  logi.txt  main.c  oczyamtrzebapamietac.txt
1wire/: onewire_DS18B20.h
2024-10-16/: 2024-10-16.uvguix.2zepp  2024-10-16.uvoptx  2024-10-16.uvprojx  main.c
2024-10-16/Listings/: 2024-10-16.map  startup_lpc17xx.lst
2024-10-16/Objects/: 2024-10-16.axf  2024-10-16.build_log.htm  2024-10-16.htm  2024-10-16.lnp  2024-10-16_Target 1.dep  main.crf  main.d  system_lpc17xx.crf
2024-10-16/exercises/: 2024-10-16-1 -- chodząca dioda.c  2024-10-16-2 -- chodząca dioda przyspieszająca na przycisk.c  2024-10-16-3 -- liczenie naciśnięć przycisku.c  2024-10-16-4-0 -- strzelanie - prawie działa.c  2024-10-16-4-1 -- strzelanie - działa.c
2024-10-23/: lab3.uvguix.2lupa  lab3.uvoptx  lab3.uvprojx  main - NA REJESTRACH.c  main.c
2024-10-23/Listings/: lab3.map
2024-10-23/Objects/: lab3.axf  lab3.build_log.htm  (+7 more)
2024-10-30/: lab3.uvguix.2lupa  lab3.uvguix.Kurt  lab3.uvoptx  lab3.uvprojx  main.c
2024-11-06/: lab3.uvguix.2lupa  lab3.uvguix.2zepp  lab3.uvoptx  lab3.uvprojx  main.c
2024-11-20/: lab3.uvguix.2zepp  lab3.uvoptx  lab3.uvprojx  main.c
ds18b20/: onewire_DS18B20.h  onewire_DS18B20_mock.c
dziala nie ruszac !!!!/: proj.uvguix.2lupa  proj.uvoptx
embedded_libraries/: LCD_ILI9325.c
fram_test/: lab3.uvguix.2lupa  lab3.uvoptx  lab3.uvprojx
fram_test_v1/: lab3.uvguix.Kurt  lab3.uvprojx  main.c
global/: global_embed.c  global_mock.c
lcd/: asciiLib.c  asciiLib.h  lcd.c  lcd.h  lcd_mock.c
mem/: mem.c
mock_compile_test/: LPC17xx.h  __typedefs.h
projekt/: default.csv  dzialajace_przeszukiwanie_drzewa_adresow.c  lab3.uvguix.2lupa  lab3.uvguix.2zepp  lab3.uvoptx  lab3.uvprojx  main.c  odkolegow.c  rysowanie_dzialajace.c  stare-podejscie.c  zdokumentacji.c
projekt-z-symulacja/: dziala.c  dziala_ze_stronami.c  main.c
pusty projekt/: lab3.uvguix.Kurt  lab3.uvoptx  lab3.uvprojx  main.c
tests/: lcd_test.c  mem_test.c  onewire_mock_test.c
uart-temperature-receiver/: receive.py
uvision/: asciilib.d  global_mock.d  gpio_lpc17xx.d  open1768_lcd.d  proj.uvguix.2lupa  proj.uvguix.Kurt  proj.uvoptx  proj.uvprojx  startup_lpc17xx.lst  uv_mock_test.uvprojx
uvision_old/: uv_mock_test.uvoptx
(+285 files in other folders)
